# glassdb-rs

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PORTING.md  README.md  release-plz.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  fuzz.yml  performance.yml
crates/glassdb/: Cargo.toml
crates/glassdb-backend/: Cargo.toml
crates/glassdb-backend-gcs/: Cargo.toml
crates/glassdb-backend-gcs/src/: lib.rs  tests.rs
crates/glassdb-backend-s3/: Cargo.toml
crates/glassdb-backend-s3/src/: caching_dns.rs  dns.rs  fake_server.rs  lib.rs  tests.rs  tuned_http.rs
crates/glassdb-backend/src/: lib.rs  memory.rs  net.rs  stats.rs
crates/glassdb-backend/src/middleware/: delay.rs  fault.rs  hook.rs  logger.rs  mod.rs  recording.rs  scheduled.rs
crates/glassdb-bench/: Cargo.toml
crates/glassdb-bench-scale/: Cargo.toml
crates/glassdb-bench-scale/src/: backend_breakdown.rs  bench.rs  lib.rs  run.rs
crates/glassdb-bench-score/: Cargo.toml
crates/glassdb-concurr/: Cargo.toml
crates/glassdb-concurr/src/: abort_signal.rs  background.rs  cancel.rs  channel.rs  clock.rs  ctx.rs  dedup.rs  exec.rs  fanout.rs  lib.rs  retry.rs  rng.rs  rt.rs  shard.rs  tape.rs
crates/glassdb-data/: Cargo.toml
crates/glassdb-data/src/: base64.rs  collection_id.rs  database_id.rs  database_uuid.rs  entropy.rs  gopath.rs  lib.rs  paths.rs  shard.rs  txid.rs
crates/glassdb-proto/: Cargo.toml  build.rs
crates/glassdb-proto/proto/: transaction.proto
crates/glassdb-proto/src/: generated.rs  lib.rs
crates/glassdb-storage/: Cargo.toml
crates/glassdb-storage/benches/: cache.rs
crates/glassdb-storage/src/: cache.rs  cache_stats.rs  cached_store.rs  directory.rs  disk_cache.rs  entry.rs  error.rs  global.rs  lib.rs  local.rs  lock.rs  locker.rs  node.rs  object_cache.rs  root.rs  shard.rs  shardstore.rs  structlog.rs  timeline.rs  tlogger.rs  txobject.rs  value_cache.rs  version.rs
crates/glassdb-trans/: Cargo.toml
crates/glassdb-trans/src/: algo.rs  error.rs  gc.rs  lib.rs  monitor.rs  node_locking.rs  reader.rs  resolver.rs  shard_coord.rs  split.rs  tlocker.rs  v2.rs
crates/glassdb-trans/tests/: v2_engine.rs
crates/glassdb/benches/: transactions.rs
crates/glassdb/src/: collection.rs  db.rs  diagnostics.rs  error.rs  iter.rs  lib.rs  scan.rs  sim.rs  stats.rs  tx.rs  version.rs
crates/glassdb/src/sim/: api.rs  cycle.rs  harness.rs  membership.rs  mod.rs  rmw.rs  slow_backend.rs
crates/glassdb/tests/: api_sim.rs  collections.rs  concurrent_sim.rs  cycle_sim.rs  fuzz_corpus.rs  in_doubt.rs  integration.rs  membership_sim.rs  proptest_concurrent.rs  read_unavailable.rs  runtime_seam.rs
crates/glassdb/tests/sim_support/: mod.rs
docs/: README.md  algo-v2.md  architecture.md  dst-approach.md  perf.md  porting-go.md
docs/adr/: 001-sharded-db-maps.md  002-wound-wait-locking.md  007-single-rw-cache-lost-update.md  008-deterministic-simulation-fuzzer.md  009-in-doubt-conditional-writes.md  010-fuzzer-coverage-guidance.md  011-guided-interleaving-executor.md  012-tokio-util-cancellation.md  013-deterministic-scheduling-test-coverage.md  014-error-reporting.md  015-read-unavailability.md  016-object-storage-native-layout.md  017-shard-object.md  018-collection-root-membership.md  019-unified-transaction-object.md  020-commit-write-back-protocol.md  021-wound-wait-leases-shard.md  022-garbage-collection-mark-sweep.md  023-slimmed-backend-trait.md  024-hold-and-wait-conflict-resolution.md  025-dedup-shard-lock-acquisition.md  026-dedup-shard-release-write-back.md  027-single-rw-parallel-lock-publish.md  028-shard-mutation-coordinator.md  029-gc-through-shard-coordinator.md  030-seed-shard-loads.md  031-dynamic-range-sharding.md  032-node-locking-and-coordinated-splits.md  033-transactional-key-iteration.md  034-paginated-listing-and-sharded-transaction-logs.md  034-separate-structural-log-namespace.md  035-bounded-staleness-snapshot-transactions.md  035-paginated-listing-and-sharded-transaction-logs.md  036-bounded-staleness-snapshot-transactions.md  036-cooperative-sealed-epochs.md  036-decoded-object-cache-with-bounded-freshness.md  037-bounded-staleness-snapshot-transactions.md  037-cooperative-sealed-epochs.md  037-epoch-versioned-key-history.md  038-cooperative-sealed-epochs.md  (+15 more)
docs/archive/: porting-go.md
docs/designs/: _template.md  dynamic-range-sharding.md  object-storage-native.md  snapshot-reads.md
docs/guides/: perf.md  releasing.md  reviewing-changes.md  testing-dst.md
docs/historical/: algo-v2.md  porting-go.md
fuzz/: .gitignore  Cargo.toml
fuzz/.cargo/: config.toml
fuzz/corpus/cycle/: a_small_nofault  b_mid_faults  c_big_faults  e_heavy_faults
fuzz/fuzz_targets/: api_correctness.rs  concurrent_tx.rs  cycle.rs  membership.rs
hack/: regen-proto.sh  release.sh
hack/autoresearch/: .gitignore  README.md  check.sh  evaluate.sh  evaluator.md  log.md  program.md
hack/autoresearch/bench/: Cargo.toml
hack/aws-bench/: .gitignore  README.md  cloudformation.yaml  compare-refs.sh  compare.py  deploy.sh  plot.py
hack/ci/: perf_report.py  test_perf_report.py
hack/glassdb-bench/: Cargo.toml
hack/glassdb-bench/src/: lib.rs
hack/perf/: .gitignore  README.md  profile.sh
