[workspace]
resolver = "2"
members = [
    "crates/glassdb-data",
    "crates/glassdb-proto",
    "crates/glassdb-concurr",
    "crates/glassdb-backend",
    "crates/glassdb-backend-s3",
    "crates/glassdb-backend-gcs",
    "crates/glassdb-storage",
    "crates/glassdb-trans",
    "crates/glassdb",
    "crates/glassdb-bench",
]
# The cargo-fuzz crate is its own workspace (needs nightly + a sanitizer); keep
# it out of the main build/test graph.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

# `--cfg madsim` activates the deterministic simulator (see ADR-008). Declaring
# it here keeps `#[cfg(madsim)]` attributes from tripping the `unexpected_cfgs`
# lint in normal builds (where the cfg is simply never set).
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[workspace.dependencies]
glassdb-data = { path = "crates/glassdb-data" }
glassdb-proto = { path = "crates/glassdb-proto" }
glassdb-concurr = { path = "crates/glassdb-concurr" }
glassdb-backend = { path = "crates/glassdb-backend" }
glassdb-backend-s3 = { path = "crates/glassdb-backend-s3" }
glassdb-backend-gcs = { path = "crates/glassdb-backend-gcs" }
glassdb-storage = { path = "crates/glassdb-storage" }
glassdb-trans = { path = "crates/glassdb-trans" }

[profile.release]
opt-level = 3
