[workspace]
resolver = "2"
members = [
    "crates/glassdb-data",
    "crates/glassdb-proto",
    "crates/glassdb-concurr",
    "crates/glassdb-backend",
    "crates/glassdb-backend-s3",
    "crates/glassdb-backend-gcs",
    "crates/glassdb-storage",
    "crates/glassdb-trans",
    "crates/glassdb",
    "crates/glassdb-bench-score",
    "crates/glassdb-bench-scale",
]
# The cargo-fuzz crate is its own workspace (needs nightly + a sanitizer); keep
# it out of the main build/test graph.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

# `--cfg sim` activates the in-repo deterministic simulation executor (see
# ADR-011). Declaring it here keeps `#[cfg(sim)]` attributes from tripping the
# `unexpected_cfgs` lint in normal builds (where the cfg is simply never set).
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(sim)'] }

[workspace.dependencies]
glassdb-data = { path = "crates/glassdb-data" }
glassdb-proto = { path = "crates/glassdb-proto" }
glassdb-concurr = { path = "crates/glassdb-concurr" }
glassdb-backend = { path = "crates/glassdb-backend" }
glassdb-backend-s3 = { path = "crates/glassdb-backend-s3" }
glassdb-backend-gcs = { path = "crates/glassdb-backend-gcs" }
glassdb-storage = { path = "crates/glassdb-storage" }
glassdb-trans = { path = "crates/glassdb-trans" }

[profile.release]
opt-level = 3

# Release-grade code with debug symbols retained, for readable profiler stacks
# (see hack/perf). Kept separate from `[profile.release]` so the benchmark/metric
# builds are unaffected.
[profile.profiling]
inherits = "release"
debug = true
