[package]
name = "glassdb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# The simulation harness (`SimWorkload` + `run_and_assert`) and the in-repo
# deterministic executor (`glassdb::rt`, under `--cfg sim`). The `sim` feature
# pulls in `arbitrary`; no external simulation runtime is needed.
glassdb = { path = "../crates/glassdb", features = ["sim"] }

[[bin]]
name = "concurrent_tx"
path = "fuzz_targets/concurrent_tx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cycle"
path = "fuzz_targets/cycle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "membership"
path = "fuzz_targets/membership.rs"
test = false
doc = false
bench = false

[[bin]]
name = "api_correctness"
path = "fuzz_targets/api_correctness.rs"
test = false
doc = false
bench = false

# Make this its own workspace so the cargo-fuzz crate (which needs nightly and a
# sanitizer) stays out of the main workspace's normal build/test graph.
[workspace]
