[package]
name = "glassdb-backend-gcs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Google Cloud Storage backend for GlassDB."

[dependencies]
async-trait = "0.1.89"
gcp_auth = "0.12.6"
glassdb-backend = { version = "0.1.0", path = "../glassdb-backend" }
glassdb-concurr = { version = "0.1.0", path = "../glassdb-concurr" }
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "sync"] }

[dev-dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "net", "io-util"] }
