[package]
name = "glassdb-backend-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Amazon S3 object-storage backend for GlassDB."

[dependencies]
async-trait = "0.1.89"
aws-config = "1.8.17"
# Drop the default `rustls` feature: it enables aws-smithy's legacy hyper-0.14 +
# rustls-0.21 client, which drags in the vulnerable rustls-webpki 0.101.x
# (RUSTSEC-2026-0104, unpatched on that line). The modern
# `default-https-client` path (rustls-aws-lc) uses the patched rustls-webpki.
aws-sdk-s3 = { version = "1.137.0", default-features = false, features = [
    "sigv4a",
    "http-1x",
    "default-https-client",
    "rt-tokio",
] }
aws-smithy-http-client = { version = "1.1.13", default-features = false, features = ["default-client", "rustls-aws-lc"] }
aws-smithy-runtime-api = { version = "1.12.3", default-features = false, features = ["client"] }
glassdb-backend = { version = "0.1.0", path = "../glassdb-backend" }
glassdb-concurr = { version = "0.1.0", path = "../glassdb-concurr" }
# Pure-Rust async DNS resolver. The tuned HTTP client resolves through this
# instead of hyper's default `getaddrinfo`-on-the-blocking-pool resolver, so a
# burst of new connections cannot saturate tokio's blocking pool. hickory also
# caches responses (honoring their TTL). Default features only (plaintext
# UDP/TCP + system resolv.conf); no DoT/DoH/QUIC/DNSSEC.
hickory-resolver = "0.26.1"
rand = "0.10.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "time"] }
tracing = "0.1.44"
# In-process fake S3 server (the `fake-server` feature). These mirror the
# dev-dependencies below so the same code compiles both under `cargo test` and
# when a downstream crate (e.g. the benchmarks) turns the feature on.
bytes = { version = "1.11.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.10.1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1.20", features = ["tokio"], optional = true }
rand_distr = { version = "0.6.0", optional = true }

[features]
# Expose `FakeS3`, an in-process S3-compatible HTTP server, as a reusable
# component (it is otherwise compiled only for this crate's tests). Lets a
# downstream benchmark drive the *real* aws-sdk-s3 transport against an
# in-memory server with simulated S3 latency — no AWS account required.
fake-server = [
    "dep:bytes",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:rand_distr",
    "tokio/net",
    "tokio/io-util",
    "tokio/rt-multi-thread",
]

[dev-dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
rand_distr = "0.6.0"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "net", "io-util"] }
