[package]
name = "glassdb-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
glassdb-concurr = { version = "0.1.0", path = "../glassdb-concurr" }
rand = "0.10.1"
rand_distr = "0.6.0"
thiserror = "2.0.18"
tokio = { package = "madsim-tokio", version = "0.2", default-features = false, features = ["time"] }
tracing = "0.1.44"

[dev-dependencies]
tokio = { package = "madsim-tokio", version = "0.2", features = ["macros", "rt", "time", "test-util"] }
