[package]
name = "glassdb-bench-scale"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

# Concurrency / throughput "scale" benchmarks for glassdb, run against real or
# simulated cloud backends. This crate pulls in the AWS / GCS SDKs; the
# lightweight, in-memory autoresearch scorer lives in the separate
# `glassdb-bench-score` crate instead.
#
# Binaries:
#   rtbench       transaction throughput & latency under concurrency scaling
#                 (ported from Go `hack/rtbench`).
#   backendbench  raw backend storage-op latencies (ported from Go
#                 `hack/backendbench`).
[dependencies]
glassdb = { path = "../glassdb", features = ["s3", "gcs", "s3-fake-server"] }
glassdb-backend = { workspace = true }
glassdb-concurr = { workspace = true }
# A real tokio runtime drives the binaries.
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
rand = "0.10.1"
aws-config = "1.8.17"
aws-sdk-s3 = "1.134.0"
# Plaintext HTTP client for the fakes3 backend's connection-pool A/B knob
# (`--http-pool`); the TLS variant for real S3 lives in glassdb-backend-s3.
aws-smithy-http-client = { version = "1.1.13", default-features = false, features = ["default-client"] }
aws-smithy-runtime-api = "1"
# `http-body-1-x` lets the `--dns-latency` repro client convert a hyper 1.0
# response body into an `SdkBody` (see src/bin/rtbench/slowdns.rs).
aws-smithy-types = { version = "1", features = ["http-body-1-x"] }
# Custom blocking-pool DNS resolver client for the `--dns-latency` repro.
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"] }
tower-service = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.52"
