[package]
name = "glassdb-bench-score"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

# Lightweight, in-memory local benchmarks for glassdb. This crate depends only
# on glassdb's public API (no cloud SDKs), so it builds fast — it backs the
# autoresearch loop and is intended to host CI perf-regression checks. The
# heavier concurrency/throughput benchmarks against real cloud backends live in
# the separate `glassdb-bench-scale` crate.
#
# This whole crate is FROZEN autoresearch infrastructure: it is off-limits to
# autoresearch experiments (see hack/autoresearch/program.md).
#
# Binaries:
#   autoresearch  the autoresearch scoring harness; the metric the loop
#                 optimizes (single-client, deterministic, in-memory).
[dependencies]
glassdb = { path = "../glassdb" }
# A real (non-madsim) tokio runtime drives the single-client workloads.
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
# The autoresearch harness emits/parses JSON scores.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
