[package]
name = "glassdb-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

# Benchmark tooling for glassdb. This whole crate is FROZEN autoresearch
# infrastructure: it is off-limits to autoresearch experiments (see
# hack/autoresearch/program.md). It depends only on glassdb's public API (plus
# the public backend/concurrency crates), so the implementation can change
# freely underneath it.
#
# Binaries:
#   autoresearch  the autoresearch scoring harness; in-memory backend only.
#                 This is the metric the loop optimizes.
#   rtbench       real/simulated cloud throughput & latency benchmarks (ported
#                 from Go `hack/rtbench`).
#   backendbench  raw backend storage-op latency benchmarks (ported from Go
#                 `hack/backendbench`).
[dependencies]
glassdb = { path = "../glassdb", features = ["s3", "gcs"] }
glassdb-backend = { workspace = true }
glassdb-concurr = { workspace = true }
# A real (non-madsim) tokio runtime drives the binaries.
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
rand = "0.10.1"
# The autoresearch harness emits/parses JSON scores.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Cloud SDKs for the rtbench / backendbench real-S3 path (GCS uses glassdb's gcs
# backend directly).
aws-config = "1.8.17"
aws-sdk-s3 = "1.134.0"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.52"
