[package]
name = "glassdb-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

# Standalone benchmark tooling ported from the Go `hack/rtbench` and
# `hack/backendbench`. It runs against real AWS S3 / GCS or a simulated
# (in-memory + DelayBackend) backend, so the cloud SDK features are always on.
[dependencies]
glassdb = { path = "../glassdb", features = ["s3", "gcs"] }
glassdb-backend = { workspace = true }
glassdb-concurr = { workspace = true }
# A real tokio runtime drives the binaries.
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
rand = "0.10.1"
aws-config = "1.8.17"
aws-sdk-s3 = "1.134.0"
aws-smithy-runtime-api = "1"
aws-smithy-types = "1"
futures = "0.3.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.52"
