[package]
name = "glassdb-concurr"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "rt-multi-thread", "test-util"] }

[dev-dependencies]
