[package]
name = "glassdb-concurr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Concurrency utilities for GlassDB (internal crate)."

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
rand = "0.10.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "rt-multi-thread", "test-util"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

[dev-dependencies]
