[package]
name = "glassdb-data"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rand = "0.10.1"

# Under `--cfg sim` transaction-id prefixes are drawn from the deterministic
# executor's seeded RNG instead of the OS, so per-seed replays are byte-identical.
[target.'cfg(sim)'.dependencies]
glassdb-concurr = { version = "0.1.0", path = "../glassdb-concurr" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
