[package]
name = "glassdb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GlassDB storage layer (internal crate)."

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
glassdb-backend = { version = "0.1.0", path = "../glassdb-backend" }
glassdb-concurr = { version = "0.1.0", path = "../glassdb-concurr" }
glassdb-data = { version = "0.1.0", path = "../glassdb-data" }
glassdb-proto = { version = "0.1.0", path = "../glassdb-proto" }
hashlink = "0.12.0"
prost = "0.14.3"
prost-types = "0.14.3"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = "0.1.44"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[dev-dependencies]
async-trait = "0.1.89"
criterion = "0.8.2"
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt", "time", "test-util"] }

# Cache microbenchmarks. `harness = false` lets criterion own `main`; `test =
# false` keeps `cargo test` (and the test-sim run) from executing it — run it
# with `cargo bench`.
[[bench]]
name = "cache"
harness = false
test = false
