[package]
name = "glassdb-trans"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
glassdb-data = { workspace = true }
glassdb-backend = { workspace = true }
glassdb-storage = { workspace = true }
glassdb-concurr = { workspace = true }
async-trait = "0.1.89"
futures = "0.3.32"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "time"] }
tokio-util = { version = "0.7.18" }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "time", "rt-multi-thread", "test-util"] }
