[package]
name = "glassdb-trans"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
glassdb-data = { workspace = true }
glassdb-backend = { workspace = true }
glassdb-storage = { workspace = true }
glassdb-concurr = { workspace = true }
async-trait = "0.1.89"
futures = "0.3.32"
thiserror = "2.0.18"
tokio = { package = "madsim-tokio", version = "0.2", features = ["rt", "macros", "sync", "time"] }

[dev-dependencies]
tokio = { package = "madsim-tokio", version = "0.2", features = ["rt", "macros", "sync", "time", "rt-multi-thread", "test-util"] }
