[package]
name = "glassdb-trans"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transaction engine for GlassDB (internal crate)."

[lints]
workspace = true

[dependencies]
glassdb-data = { workspace = true }
glassdb-backend = { workspace = true }
glassdb-storage = { workspace = true }
glassdb-concurr = { workspace = true }
async-trait = "0.1.89"
futures = "0.3.32"
hashlink = "0.12.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "rt-multi-thread", "test-util"] }
