[package]
name = "glassdb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A stateless, ACID, serializable key/value store on top of object storage."
keywords = ["database", "acid", "key-value", "object-storage", "transactions"]
categories = ["database", "asynchronous"]

[lints]
workspace = true

[dependencies]
glassdb-data = { workspace = true }
glassdb-backend = { workspace = true }
glassdb-backend-s3 = { workspace = true, optional = true }
glassdb-backend-gcs = { workspace = true, optional = true }
glassdb-storage = { workspace = true }
glassdb-trans = { workspace = true }
glassdb-concurr = { workspace = true }
futures = "0.3.32"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-util = "0.7.18"
# Only used by the `sim` feature (deterministic fuzz harness); kept optional so
# production builds don't pull it in.
arbitrary = { version = "1", optional = true }
tracing = "0.1.44"

[features]
default = []
# Pull in the Amazon S3 backend (heavy AWS SDK dependency).
s3 = ["dep:glassdb-backend-s3"]
# Pull in the Google Cloud Storage backend (reqwest/gcp_auth dependency).
gcs = ["dep:glassdb-backend-gcs"]
# Expose the deterministic-simulation workload harness (`glassdb::sim`) used by
# the `fuzz/` crate and the op-stream self-check. See ADR-008 and ADR-011.
sim = ["dep:arbitrary"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "rt-multi-thread", "test-util"] }
proptest = "1.9.0"
criterion = "0.8.2"
async-trait = "0.1.89"

# Transaction microbenchmarks ported from the Go `bench_test.go`. `harness =
# false` lets criterion own `main`; `test = false` keeps `cargo test` (and the
# test-sim run) from executing it — run it with `cargo bench`.
[[bench]]
name = "transactions"
harness = false
test = false
