[package]
name = "autoresearch-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

# The autoresearch scoring harness (ported from the Go `hack/autoresearch/bench`
# package). It is FROZEN infrastructure: it defines the metric and must NOT be
# modified by autoresearch experiments. Unlike `glassdb-bench`, it only needs the
# in-memory backend (no cloud SDKs) and links a counting global allocator so it
# can report allocations/bytes per transaction.
[dependencies]
glassdb = { path = "../../../crates/glassdb" }
# A real (non-madsim) tokio runtime drives the single-client workloads.
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
